test_suite5/ALAN/test_suite/alan-2022-examples/failing/003290_mutation.alan
source n begin if 384 then relax else relax or end end
